--- a/ebot/package.json
+++ b/ebot/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
-        "lint": "eslint .",
+        "lint": "./node_modules/.bin/eslint .",
         "test": "echo \"Error: no test specified\" && exit 1",
         "debug": "nodemon --inspect ./index.js"
     },
@@ -18,9 +18,9 @@
     },
     "dependencies": {
         "botbuilder": "~4.4.0",
-        "botbuilder-dialogs": "^4.5.0",
+        "botbuilder-dialogs": "^4.4.0",
         "dotenv": "^7.0.0",
-        "restify": "~8.2.0"
+        "restify": "^7.7.0"
     },
     "devDependencies": {
         "eslint": "^5.13.0",
