--- a/ebot/package.json
+++ b/ebot/package.json
@@ -20,7 +20,8 @@
         "botbuilder": "~4.4.0",
         "botbuilder-dialogs": "^4.4.0",
         "dotenv": "^7.0.0",
-        "restify": "^7.7.0"
+        "restify": "^7.7.0",
+        "xml2js": "^0.4.19"
     },
     "devDependencies": {
         "eslint": "^5.13.0",
