--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "applicationinsights": "^1.4.0",
         "botbuilder": "~4.4.0",
         "botbuilder-dialogs": "^4.4.0",
+        "dateformat": "^3.0.3",
         "dotenv": "^7.0.0",
         "restify": "^7.7.0",
         "xml2js": "^0.4.19"
