--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "botbuilder-dialogs": "^4.4.0",
         "dateformat": "^3.0.3",
         "dotenv": "^7.0.0",
+        "mocha": "^6.2.0",
         "restify": "^7.7.0",
         "xml2js": "^0.4.19"
     },
@@ -35,5 +36,8 @@
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
         "nodemon": "^1.18.10"
-    }
+    },
+    "scripts": {
+        "test": "mocha"
+      }
 }
